deployment/samples/models/qwen3/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qwen3-dev-route
spec:
  parentRefs:
    - name: openshift-ai-inference
      namespace: openshift-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /qwen3
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: qwen3-0-6b-instruct-predictor
          port: 80
          weight: 100
